Run "Migrate to Spring Boot 3.5" OpenRewrite recipe
See https://docs.openrewrite.org/recipes/java/spring/boot3/upgradespringboot_3_5-community-edition

```
mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
-Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-spring:RELEASE \
-Dres=org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_5 \
-Drewrite.exportDatatables=true

make format
```